--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,12 @@ h1 {
 
 .right-side {
     width: 30%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.failed-title {
+    width: 100%;
 }
 
 .phrase {
@@ -47,7 +53,10 @@ h1 {
 .hidden {
     font-size: 2em;
     padding: 5px;
-    color: rgb(74, 74, 74);
+    color: rgb(74, 74, 74, 0);
+    /* visibility: hidden; */
+    margin-left: 5px;
+    border-bottom: 2px solid rgb(74, 74, 74);
 }
 
 .underscore {
@@ -55,7 +64,7 @@ h1 {
 }
 
 .hangman-container > div {
-    border: 8px solid rgb(74, 74, 74);
+    border: 8px solid rgb(74, 74, 74, 0);
     position: absolute;
 }
 
@@ -154,9 +163,26 @@ h1 {
 .character:hover {
     background-color: rgb(255,255,255, .5);
     border-radius: 10%;
+    cursor: pointer;
 }
 
 .character:active {
     background-color: rgb(255,255,255, .7);
     border-radius: 10%;
+}
+
+.gameover {
+    display: none;
+    text-align: center;
+    font-size: 4em;
+    position: absolute;
+    top: 0px;
+    height: 100vh;
+    width: 2000px;
+    background-color: rgb(255,255,255, .9)  ;
+}
+
+.guess {
+    font-size: 4em;
+    color: red;
 }
